@@ -1,3 +1,8 @@
+<h5>1.67.0 Beta 2 [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.26, PHP 8.0.14, PHP 8.1.2
+<hr>
+- type hinting, cosmetics (mamba)
+- fix missing $helper in blocks (heyula/mamba)
+
 <h5>1.67.0 Beta 1 [2022-01-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.26, PHP 8.0.14, PHP 8.1.2
 <hr>
 - namespaces (mamba)
